--- a/index.html
+++ b/index.html
@@ -401,12 +401,12 @@
         
         // 简单的大寒到春分等节气划分，误差在1-2日内，符合书中简易推算原则
         // 1.21-3.21 初之气; 3.21-5.21 二之气 ...
-        if (md >= 121 && md < 321) monthText = "【初之气 (厥阴风木主令)】<br>气候特征：风大，多风。 <br>健康提示：肝气较旺，易冲动，需注意疏肝理气。";
-        else if (md >= 321 && md < 521) monthText = "【二之气 (少阴君火主令)】<br>气候特征：温暖，火热。 <br>健康提示：心火较旺，易患皮肤病、口疮，需注意养心清火。";
-        else if (md >= 521 && md < 722) monthText = "【三之气 (少阳相火主令)】<br>气候特征：炎热，暑湿。 <br>健康提示：相火旺，怕热，易上火，需注意清热解暑。";
-        else if (md >= 722 && md < 922) monthText = "【四之气 (太阴湿土主令)】<br>气候特征：潮湿，多雨。 <br>健康提示：脾胃较差，易胃寒、腹泻、关节炎，需注意健脾祛湿。";
-        else if (md >= 922 && md < 1122) monthText = "【五之气 (阳明燥金主令)】<br>气候特征：干燥，凉爽。 <br>健康提示：大肠功能较差，易便秘或腹泻，易患颈椎病，需注意润燥。";
-        else monthText = "【终之气 (太阳寒水主令)】<br>气候特征：寒冷，冰冻。 <br>健康提示：肾气弱，怕冷，易患关节炎、腰椎病，需注意温阳补肾。";
+        if (md >= 121 && md < 321) monthText = "初之气 (厥阴风木主令)<br>气候特征：风大，多风。 <br>健康提示：肝气较旺，易冲动，需注意疏肝理气。";
+        else if (md >= 321 && md < 521) monthText = "二之气 (少阴君火主令)<br>气候特征：温暖，火热。 <br>健康提示：心火较旺，易患皮肤病、口疮，需注意养心清火。";
+        else if (md >= 521 && md < 722) monthText = "三之气 (少阳相火主令)<br>气候特征：炎热，暑湿。 <br>健康提示：相火旺，怕热，易上火，需注意清热解暑。";
+        else if (md >= 722 && md < 922) monthText = "四之气 (太阴湿土主令)<br>气候特征：潮湿，多雨。 <br>健康提示：脾胃较差，易胃寒、腹泻、关节炎，需注意健脾祛湿。";
+        else if (md >= 922 && md < 1122) monthText = "五之气 (阳明燥金主令)<br>气候特征：干燥，凉爽。 <br>健康提示：大肠功能较差，易便秘或腹泻，易患颈椎病，需注意润燥。";
+        else monthText = "终之气 (太阳寒水主令)<br>气候特征：寒冷，冰冻。 <br>健康提示：肾气弱，怕冷，易患关节炎、腰椎病，需注意温阳补肾。";
         
         // 1月1日-1月20日 属于上一年的终之气，做特殊处理
         if (md < 121) monthText = "【终之气 (太阳寒水主令)】<br>气候特征：寒冷，冰冻。 <br>健康提示：肾气弱，怕冷，易患关节炎、腰椎病，需注意温阳补肾。";
@@ -499,3 +499,4 @@
 
 </body>
 </html>
+
