--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         else monthText = "终之气 (太阳寒水主令)<br>气候特征：寒冷，冰冻。 <br>健康提示：肾气弱，怕冷，易患关节炎、腰椎病，需注意温阳补肾。";
         
         // 1月1日-1月20日 属于上一年的终之气，做特殊处理
-        if (md < 121) monthText = "【终之气 (太阳寒水主令)】<br>气候特征：寒冷，冰冻。 <br>健康提示：肾气弱，怕冷，易患关节炎、腰椎病，需注意温阳补肾。";
+        if (md < 121) monthText = "终之气 (太阳寒水主令)<br>气候特征：寒冷，冰冻。 <br>健康提示：肾气弱，怕冷，易患关节炎、腰椎病，需注意温阳补肾。";
 
         document.getElementById('res_month_analysis').innerHTML = monthText;
 
@@ -499,4 +499,5 @@
 
 </body>
 </html>
+
 
