--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
     </div>
 
     <button onclick="calculate()">开始分析</button>
+    
+    <button onclick="window.location.href='5y6qty.html'" style="background-color: #546e7a; margin-top: 15px;">五运六气年份推演</button>
 
     <div id="result" class="result-box">
         <div class="result-item">
@@ -499,5 +501,3 @@
 
 </body>
 </html>
-
-
