--- a/5y6qty.html
+++ b/5y6qty.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>五运六气精准历法推演</title>
+    <title>五运六气推演</title>
     <style>
         /* --- 全局样式 --- */
         body {
@@ -448,3 +448,4 @@
 
 </body>
 </html>
+
