Fix typo in print statement

--- a/5y6qty.html
+++ b/5y6qty.html
@@ -163,7 +163,7 @@
 <body>
 
 <div class="container">
-    <h1>五运六气精准推演</h1>
+    <h1>五运六气推演</h1>
     
     <div class="control-panel">
         <label style="margin-right:10px; font-weight:bold;">选择年份：</label>
@@ -448,4 +448,5 @@
 
 </body>
 </html>
+
 
