--- a/5y6qty.html
+++ b/5y6qty.html
@@ -191,8 +191,8 @@
                 <thead>
                     <tr>
                         <th style="width:30%">节气与时间</th>
-                        <th style="width:15%">主气</th>
-                        <th style="width:15%">客气</th>
+                        <th style="width:15%">主气 (地)</th>
+                        <th style="width:15%">客气 (天)</th>
                         <th style="width:40%">气机分析</th>
                     </tr>
                 </thead>
@@ -448,5 +448,6 @@
 
 </body>
 </html>
+
 
 
